[package]
name = "bidding-token"
version = "0.1.1"
authors = ["hoanm <mr.nmh175@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.9
"""

[dependencies]
cosmwasm-schema = "1.1.9"
cosmwasm-std = "1.1.9"
cosmwasm-storage = "1.1.9"
cw-storage-plus = "1.0.1"
cw2 = "1.0.0"
schemars = "0.8.11"
serde = { version = "1.0.149", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.37" }
cw20 = {version = "1.0.0"}
cw20-base = {version = "1.0.0", features = ["library"]}
getrandom = {version = "0.2.7", default-features = false, features = ["js"]}
